fixed spacing and font weight

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,14 @@ body {
   margin: 50px;
 }
 
-h1, h2 {
+h1, 
+h2 {
   font-family: 'Major Mono Display', monospace;
+}
+
+h3 {
+  margin-top: 0;
+  font-weight: normal;
 }
 
 a {
@@ -30,7 +36,7 @@ a:hover {
   text-align: left;
   outline: none;
   font-size: 15px;
-  transition: 300ms;
+  transition: 200ms;
 }
 
 .active,
@@ -41,7 +47,7 @@ a:hover {
   cursor: pointer;
 }
 .collapsible:active {
-  transform: scalex(0.90)
+  transform: scalex(0.99)
 }
 
 .content {  
